--- a/client/sass/main.scss
+++ b/client/sass/main.scss
@@ -59,13 +59,13 @@ html, body {
 body {
   background-color: $body-bg-color;
 
-  &:before {
-    content: "What! No Javascript?!";
-    color: white;
-    margin-left: 20px;
-    line-height: 80px;
-    font-size: 1.8em;
-  }
+  // &:before {
+  //   content: "What! No Javascript?!";
+  //   color: white;
+  //   margin-left: 20px;
+  //   line-height: 80px;
+  //   font-size: 1.8em;
+  // }
 }
 
 .row { max-width: 960px; }
